<resources>
    <string name="app_name">Pengajuan Cuti BNN Kab. Blitar</string>
    <string name="aplikasi_pengajuan_cuti">APLIKASI PENGAJUAN CUTI\nBNN</string>
    <string name="login">LOGIN</string>
    <string name="login_admin_klik_disini">Login Admin Klik Disini</string>
    <string name="password">Password</string>
    <string name="email_not_valid">Email tidak valid!</string>
    <string name="empty_password">Password tidak boleh kosong!</string>
    <string name="email">Email</string>
    <string name="login_hrd_manager">LOGIN HRD dan Manajer</string>
    <string name="login_karyawan_klik_disini">Login Karyawan Klik Disini</string>
    <string name="username">Username</string>
    <string name="empty_username">Username tidak boleh kosong!</string>
    <string name="title_activity_leave">Riwayat Cuti</string>
    <string name="ajukan_cuti">Ajukan Cuti</string>
    <string name="riwayat_cuti">Riwayat Cuti</string>
    <string name="profil_diri">Profil Diri</string>
    <string name="keluar">Keluar</string>
    <string name="sistem_informasi_pengajuan_cuti">Sistem Informasi Pengajuan Cuti</string>
    <string name="home">Home</string>
    <string name="jabatan">Jabatan</string>
    <string name="departemen">Divisi</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="kota_kabupaten">Kota / Kabupaten</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="no_hp">No. HP</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="update_profile">Ubah Profil</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="sisa_cuti">Sisa Cuti</string>
    <string name="jenis_cuti">Jenis Cuti</string>
    <string name="cuti_non_tahunan">Cuti Non-Tahunan</string>
    <string name="cuti_tahunan">Cuti Tahunan</string>
    <string name="pilih_jenis_cuti">Pilih Jenis Cuti</string>
    <string name="tanggal_cuti">Tanggal Cuti</string>
    <string name="tanggal_masuk_kembali">Tanggal Masuk Kembali</string>
    <string name="keterangan">Keterangan</string>
    <string name="permohonan_cuti_tahunan">Pengajuan Cuti Tahunan</string>
    <string name="permohonan_cuti_non_tahunan">Permohonan Cuti Non-Tahunan</string>
    <string name="hak_cuti_dipergunakan">Hak cuti dipergunakan :</string>
    <string name="sisa_cuti_anda">Sisa cuti anda :</string>
    <string name="choose_start_date_first">Pilih tanggal cuti terlebih dahulu!</string>
    <string name="mengurangi_hak_cuti_tahunan">Akan Mengurangi Hak Cuti Tahunan</string>
    <string name="tidak_mengurangi_hak_cuti_tahunan">Tidak Mengurangi Hak Cuti Tahunan</string>
    <string name="alert_no_right_left">Maaf sisa cuti Anda 0 hari. Silahkan hubungi admin</string>
    <string name="empty_field">Field tidak boleh kosong!</string>
    <string name="not_enough_rights">Sisa hak cuti anda tidak cukup!</string>
    <string name="leave_request_success">Permohonan Cuti Berhasil Terkirim</string>
    <string name="leave_request_failed">Permohonan cuti gagal!</string>
    <string name="wrong_end_date">Tanggal salah!</string>
    <string name="choose_leave_type_first">Pilih jenis cuti terlebih dahulu!</string>
    <string name="exit_dialogue">Apakah anda yakin akan keluar?</string>
    <string name="detail_cuti">Detail Cuti</string>
    <string name="keperluan_cuti">Keperluan Cuti</string>
    <string name="tanggal_cuti_tanggal_masuk">Tanggal Cuti - Tanggal Masuk</string>
    <string name="tanggal_pengajuan">Tanggal Pengajuan</string>
    <string name="jumlah_hari_cuti">Jumlah Hari Cuti</string>
    <string name="login_hrd">Login HRD</string>
    <string name="login_manajer">Login Manajer</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="divisi">Divisi</string>
    <string name="pilih_department">Pilih Divisi</string>
    <string name="update_profile_success">Data diri berhasil diperbarui!</string>
    <string name="failed_update_profile">Data diri gagal diperbarui!</string>
    <string name="permohonan_cuti">Cuti Karyawan</string>
    <string name="karyawan">Karyawan</string>
    <string name="halaman_admin">Halaman Admin Cuti</string>
    <string name="ambil_keputusan">Ambil Keputusan</string>
    <string name="catatan_admin">Catatan Admin</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="empty_decision">Keputusan belum diambil!</string>
    <string name="empty_admin_remark">Catatan admin tidak boleh kosong!</string>
    <string name="make_decision_success">Keputusan berhasil diambil</string>
    <string name="make_decision_failed">Gagal mengambil keputusan!</string>
    <string name="nama_karyawan">Nama Karyawan</string>
    <string name="sisa_hak_cuti">Sisa Hak Cuti</string>
    <string name="Ubah">Ubah</string>
    <string name="Hapus">Hapus</string>
    <string-array name="ambil_keputusan_array">
        <item>Ambil Keputusan</item>
        <item>Setujui</item>
        <item>Tolak</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_divisi">Nama Divisi</string>
    <string name="singkatan_divisi">Singkatan Divisi</string>
    <string name="tambah_divisi">Tambah Sub Bagian Kerja</string>
    <string name="add_success">Data berhasil ditambah</string>
    <string name="update_success">Data berhasil diubah</string>
    <string name="delete_success">Data berhasil dihapus</string>
    <string name="add_failed">Gagal menambahkan data!</string>
    <string name="update_failed">Gagal mengubah data!</string>
    <string name="delete_failed">Gagal menghapus data!</string>
    <string name="kode_divisi">Kode Divisi</string>
    <string name="update_divisi">Update Divisi</string>
    <string name="delete_department">Hapus divisi ini?</string>
    <string name="delete_alert">Anda yakin ingin menghapus data ini?</string>
    <string name="nomor_dalam_alfabet">Nomor (Dalam Alfabet)</string>
    <string name="tambah_cuti_tahunan">Tambah Cuti Tahunan</string>
    <string name="ubah_cuti_tahunan">Ubah Cuti Tahunan</string>
    <string name="tambah_cuti_non_tahunan">Tambah Cuti Non-Tahunan</string>
    <string name="hak_diberikan_hari">Hak Diberikan (Hari)</string>
    <string name="update_cuti_non_tahunan">Update Cuti Non-Tahunan</string>
    <string name="hak_cuti_tahunan_hari">Hak Cuti Tahunan (hari)</string>
    <string name="_12">12</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="kode_karyawan">Kode Karyawan</string>
    <string name="update_karyawan">Update Karyawan</string>
    <string name="incorrect_login_info">Username atau Password salah!</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="empty_new_password">Password baru tidak boleh kosong!</string>
    <string name="confirm_new_password_not_match">Password yang anda masukkan berbeda!</string>
    <string name="change_password_success">Password berhasil diperbarui</string>
    <string name="change_password_failed">Password Lama anda salah!</string>
    <string name="belum_ada_riwayat_cuti">Belum Ada Riwayat Cuti</string>
    <string name="bnn_blitar">BNN BLITAR</string>
    <string name="sign_in_to_start_your_session">Sign In to Start Your Session</string>
    <string name="sign_in">Log In</string>
    <string name="login_admin_cuti">Login Admin Cuti</string>
    <string name="login_kepala_bnn">Login Kepala BNN</string>
    <string name="login_karyawan">Login Karyawan</string>
    <string name="status_non_aktif">Login Gagal! Akun anda telah dinonaktifkan!</string>
    <string name="halaman_manager">Halaman Kepala BNN</string>
    <string name="subag">Subag</string>
    <string name="nama">Nama</string>
    <string name="sub_bagian_kerja">Sub Bagian Kerja</string>
    <string name="kode_bagian_kerja">Kode Bagian Kerja</string>
    <string name="update_subag">Update Sub Bagian Kerja</string>
    <string name="pilih_subag">Pilih Sub Bagian Kerja</string>
    <string name="status">Status</string>
    <string name="aktif">AKTIF</string>
    <string name="non_aktif">NON AKTIF</string>
    <string name="admin_kepala_bnn"><![CDATA[Admin & Kepala BNN]]></string>
    <string name="admin_cuti">Admin Cuti</string>
    <string name="kepala_bnn">Kepala BNN</string>
    <string name="statuss">Status :</string>
    <string name="tambah_admin">Tambah Admin</string>
    <string name="non_aktif_alert">Non aktifkan akun ini?</string>
    <string name="non_aktifkan">Non Aktifkan</string>
    <string name="invalid_non_active">Tidak bisa mengubah akun sendiri!</string>
    <string name="aktifkan">Aktifkan</string>
    <string name="already_non_active">Akun sudah non aktif!</string>
    <string name="already_active">Akun sudah aktif!</string>
    <string name="aktif_alert">Aktifkan akun ini?</string>
    <string name="tambah_kepala_bnn">Tambah Kepala BNN</string>
    <string name="login_kasi_kasubag">Login Kasi/Kasubag</string>
    <string name="setujui_cuti">Setujui Cuti</string>
    <string name="halaman_kasi">Halaman Kasi</string>
    <string name="halaman_ksb">Halaman Kasubag</string>
    <string name="halaman_karyawan">Halaman Karyawan</string>
    <string name="no_data_found">Tidak ada data!</string>
    <string name="no_cuti">Nomor Cuti</string>
    <string name="catatan_kasi">Catatan Kasi</string>
    <string name="catatan_kasubag">Catatan Kasubag</string>
    <string name="empty_no_cuti">Nomor Cuti tidak boleh kosong!</string>
    <string name="catatan_kepala_bnn">Catatan Kepala BNN</string>
    <string name="nip">NIP</string>
    <string name="kasi">Kasi</string>
    <string name="kasubag">Kasubag</string>
    <string name="tanggal_mulai_cuti">Tanggal Mulai Cuti</string>
    <string name="tanggal_akhir_cuti">Tanggal Akhir Cuti</string>
    <string name="kasi_amp_kasubag"><![CDATA[Kasi & Kasubag]]></string>
    <string name="tambah_kasi">Tambah Kasi</string>
    <string name="tambah">Tambah</string>
    <string name="tambah_kasi_kasubag"><![CDATA[Tambah Kasi & Kasubag]]></string>
    <string name="data_cuti_karyawan">Data Cuti Karyawan</string>
</resources>
