<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="login"
            type="com.astronout.tmc.modules.auth.empolyees.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login_karyawan"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_24ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_white"
                android:orientation="vertical"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_24sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_24sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_24sdp"
                    android:gravity="center"
                    android:text="@string/sign_in_to_start_your_session"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="normal" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="@color/ef_grey"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_email_white_24dp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        app:bindingTextInputEditText="@{login._userName}"
                        tools:text="heheh" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:hint="@string/password"
                    android:textColorHint="@color/ef_grey"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="#BDBDBD">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@android:color/black"
                        app:bindingTextInputEditText="@{login._password}"
                        tools:text="afasfwqf" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_44sdp"
                    android:layout_gravity="end"
                    android:text="@string/sign_in"
                    android:textColor="@color/ef_white"
                    android:textSize="@dimen/_14ssp"
                    app:backgroundTint="@color/colorPrimary"
                    app:cornerRadius="@dimen/_4sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLoginAdmin"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/login_admin_cuti"
                        android:textColor="#CC0000"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLoginKasi"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/login_kasi_kasubag"
                        android:textColor="#CC0000"
                        android:gravity="center"
                        android:textSize="@dimen/_12ssp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLoginManager"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:text="@string/login_kepala_bnn"
                        android:textColor="#CC0000"
                        android:textSize="@dimen/_12ssp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>