<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_12sdp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerKeputusan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:entries="@array/ambil_keputusan_array"
        android:spinnerMode="dropdown"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/admin_remark_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/catatan_admin"
        android:layout_marginTop="@dimen/_18sdp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences"
            tools:text="Ini catatan admin"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_batal"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batal"
            app:strokeColor="@color/ef_white"
            android:textColor="@color/ef_grey"
            android:textSize="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_5sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_simpan"
            android:text="@string/simpan"
            android:textSize="@dimen/_10ssp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>